scraper-plugins/scraper-plugins-core/src/test/resources/scraper/plugins/core/typechecker/fail/socketnode4.yf
---
name: socket
graphs:
  start:
    - type: SocketNode
      expected: "{initial}"
      # initial can never be written
      hostMap:

